--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,8 @@
   <!-- Chart.js e XLSX -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <!-- Script principal -->
+  <script src="script.js"></script>
 </head>
 <body>
   <header>
